--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="talhajavedmukhtar.networkscan.MainActivity">
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:visibility="visible"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:indeterminate="false"
+        style="?android:attr/progressBarStyleHorizontal"/>
     <LinearLayout
+        android:layout_below="@id/pbLoading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -37,12 +46,19 @@
                 android:text="80,9000,8008"
                 android:layout_below="@+id/cidr"
                 android:layout_centerHorizontal="true" />
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/timeout"
+                android:text="1000"
+                android:layout_below="@+id/ports"
+                android:layout_centerHorizontal="true"/>
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_below="@+id/ports"
+                android:layout_below="@+id/timeout"
                 android:layout_centerHorizontal="true" >
                 <LinearLayout
                     android:layout_width="fill_parent"
