--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,34 +25,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ip"
-                android:text="192.168.100.1"
-                android:layout_alignParentTop="true" />
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/cidr"
-                android:text="24"
-                android:layout_below="@+id/ip"
-                android:layout_centerHorizontal="true" />
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ports"
-                android:text="80,9000,8008"
-                android:layout_below="@+id/cidr"
-                android:layout_centerHorizontal="true" />
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/timeout"
-                android:text="10000"
-                android:layout_below="@+id/ports"
-                android:layout_centerHorizontal="true"/>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ip"
+                    android:text="192.168.100.1"
+                    android:layout_alignParentTop="true"
+                    android:hint="Network Address"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cidr"
+                    android:text="24"
+                    android:layout_below="@+id/ip"
+                    android:layout_centerHorizontal="true"
+                    android:hint="Network Size"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ports"
+                    android:text="80,9000,8008"
+                    android:layout_below="@+id/cidr"
+                    android:layout_centerHorizontal="true"
+                    android:hint="Ports to Scan"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/timeout"
+                    android:text="10000"
+                    android:layout_below="@+id/ports"
+                    android:layout_centerHorizontal="true"
+                    android:hint="Timeout"/>
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
