Added summary activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,30 +107,13 @@
                         android:layout_weight="1"
                         android:text="Save"
                         android:id="@+id/saveOutput"/>
-                    <!--<Button
+                    <Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="GH"
-                        android:id="@+id/googleHome"/>-->
+                        android:text="View Summary"
+                        android:id="@+id/viewSummary"/>
                 </LinearLayout>
-                <!--<LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <Button
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="UPNP"
-                        android:id="@+id/upnpDiscover"/>
-                    <Button
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="MDNS"
-                        android:id="@+id/mdnsDiscover"/>
-                </LinearLayout>-->
             </LinearLayout>
 
 
