--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                     android:layout_centerHorizontal="true"
                     android:hint="Network Size"/>
             </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
+            <!--<android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -59,7 +59,7 @@
                     android:layout_below="@+id/cidr"
                     android:layout_centerHorizontal="true"
                     android:hint="Ports to Scan"/>
-            </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>-->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -70,7 +70,7 @@
                     android:text="10"
                     android:layout_below="@+id/ports"
                     android:layout_centerHorizontal="true"
-                    android:hint="Timeout"/>
+                    android:hint="Timeout (seconds)"/>
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
@@ -90,12 +90,12 @@
                         android:text="Scan Hosts"
                         android:id="@+id/scan"
                         />
-                    <Button
+                    <!--<Button
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Scan Ports"
-                        android:id="@+id/scanPorts"/>
+                        android:id="@+id/scanPorts"/>-->
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
