--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/totalDevices"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"/>
     <ListView
         android:id="@+id/deviceAddresses"
