--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -20,12 +20,25 @@
         android:layout_height="0dp"
         android:layout_weight="8"
         />
-    <Button
-        android:id="@+id/closeButton"
-        android:text="CLOSE"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="horizontal"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+        <Button
+            android:id="@+id/saveButton"
+            android:text="SAVE"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/closeButton"
+            android:text="CLOSE"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
 
 
 </LinearLayout>
