--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -20,6 +20,12 @@
         android:layout_height="0dp"
         android:layout_weight="8"
         />
+    <Button
+        android:id="@+id/portScanButton"
+        android:text="Scan Ports on Selected IP's"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
