--- a/app/src/main/res/layout/activity_banner_grab.xml
+++ b/app/src/main/res/layout/activity_banner_grab.xml
@@ -16,10 +16,23 @@
         android:id="@+id/grabbedBanners"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
-    <Button
-        android:layout_weight="1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/closeButton"
-        android:text="CLOSE"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="0.1">
+        <Button
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/saveButton"
+            android:text="SAVE"/>
+        <Button
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/closeButton"
+            android:text="CLOSE"/>
+    </LinearLayout>
+
 </LinearLayout>
